--- a/springcloud-config-client/src/main/resources/bootstrap.properties
+++ b/springcloud-config-client/src/main/resources/bootstrap.properties
@@ -1,5 +1,9 @@
 spring.application.name=ibole
-spring.cloud.config.profile=dev
+#要读取的配置文件application属性
+spring.cloud.config.name=ibole
+#要读取的配置文件profile属性,默认是dev
+spring.cloud.config.profile=prod
+#配置中心服务的地址
 spring.cloud.config.uri=http://localhost:7001/
 
 server.port=7002
