--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.ibole</groupId>
-	<artifactId>spring-cloud-example</artifactId>
+	<artifactId>springcloud-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 	<parent>
@@ -64,6 +64,7 @@
 		<module>springcloud-config-server</module>
 		<module>springcloud-config-client</module>
 		<module>springcloud-config-repo</module>
+		<module>springcloud-gateway</module>
 	</modules>
 	
 </project>
