--- a/springcloud-config-repo/pom.xml
+++ b/springcloud-config-repo/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.ibole</groupId>
-    <artifactId>spring-cloud-example</artifactId>
+    <artifactId>springcloud-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>springcloud-config-repo</artifactId>
