--- a/springcloud-config-server/pom.xml
+++ b/springcloud-config-server/pom.xml
@@ -3,12 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.ibole</groupId>
-		<artifactId>spring-cloud-example</artifactId>
+		<artifactId>springcloud-example</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<packaging>jar</packaging>
-	<artifactId>springcloud-config-server</artifactId>
-
+	<artifactId>springcloud-config-server</artifactId>	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
