--- a/springcloud-config-server/src/main/resources/application.properties
+++ b/springcloud-config-server/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=config-server
 server.port=7001
 
 # git
-spring.cloud.config.server.git.uri=http://git.oschina.net/didispace/SpringBoot-Learning/
-spring.cloud.config.server.git.searchPaths=Chapter9-1-4/config-repo
+#spring.cloud.config.server.git.uri=http://git.oschina.net/didispace/SpringBoot-Learning/
+spring.cloud.config.server.git.uri=file:///E:/dev/git/ibole-spring-cloud-example
+spring.cloud.config.server.git.searchPaths=springcloud-config-repo
 spring.cloud.config.server.git.username=username
 spring.cloud.config.server.git.password=password
 
