--- a/springcloud-gateway/pom.xml
+++ b/springcloud-gateway/pom.xml
@@ -6,14 +6,16 @@
 		<artifactId>springcloud-example</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<packaging>jar</packaging>
-	<artifactId>springcloud-service-provider</artifactId>
-	
+	<artifactId>springcloud-gateway</artifactId>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zuul</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 	</dependencies>
-
 </project>
