--- a/springcloud-service-provider/pom.xml
+++ b/springcloud-service-provider/pom.xml
@@ -8,11 +8,19 @@
 	</parent>
 	<packaging>jar</packaging>
 	<artifactId>springcloud-service-provider</artifactId>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
 		</dependency>
 	</dependencies>
 
