--- a/springcloud-service-ribbon-consumer/src/main/resources/application.properties
+++ b/springcloud-service-ribbon-consumer/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=ribbon-consumer
 server.port=3333
 
+eureka.instance.leaseRenewalIntervalInSeconds= 10
+eureka.client.registryFetchIntervalSeconds= 5
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
