--- a/springcloud-monitor-turbine/src/main/resources/application.properties
+++ b/springcloud-monitor-turbine/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
 spring.application.name=turbine
 turbine.appConfig=node01,node02
-turbine.aggregator.clusterConfig= MAIN
-turbine.clusterNameExpression= metadata['cluster']
+turbine.aggregator.clusterConfig=MAIN
+turbine.clusterNameExpression=metadata['cluster']
