--- a/springcloud-discovery/src/main/resources/application.properties
+++ b/springcloud-discovery/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=1111
+spring.application.name=eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
