--- a/springcloud-monitor-turbine/src/test/resources/node01.properties
+++ b/springcloud-monitor-turbine/src/test/resources/node01.properties
@@ -1,4 +1,4 @@
-server.port=8087
-spring.config.name=node01
+server.port=8081
+spring.application.name=node01
 eureka.instance.hostname=localhost
 eureka.instance.metadata-map.cluster=MAIN
